# sequence

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  array.h  array.t.cpp  back.h  binop.h  binop.t.cpp  cartesian.h  cartesian.t.cpp  concatenate.h  concatenate.t.cpp  cons.h  constant.h  counted.h  counted.t.cpp  drop.h  drop.t.cpp  empty.h  epsilon.h  factorial.h  factorial.t.cpp  filter.h  filter.t.cpp  flatten.h  fmap.h  fmap.t.cpp  fold.h  fold.t.cpp  input.h  iterator.h  length.h  merge.h  merge.t.cpp  null.h  null.t.cpp  null_sequence.h  pointer.h  (+20 more)
include/: array.h  back.h  binop.h  cartesian.h  concatenate.h  cons.h  constant.h  counted.h  drop.h  empty.h  epsilon.h  factorial.h  filter.h  flatten.h  fmap.h  fold.h  length.h  merge.h  null.h  pointer.h  power.h  reverse.h  scan.h  sequence.h  singleton.h  take.h  tuple.h  zip.h
sequence/: sequence.h  sequence.t.cpp  sequence.vcxproj  sequence.vcxproj.filters  sequence_test.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  array.t.cpp  binop.t.cpp  cartesian.t.cpp  concatenate.t.cpp  counted.t.cpp  drop.t.cpp  factorial.t.cpp  filter.t.cpp  flatten.t.cpp  fmap.t.cpp  fold.t.cpp  merge.t.cpp  null.t.cpp  pointer.t.cpp  power.t.cpp  reverse.t.cpp  scan.t.cpp  sequence.t.cpp  singleton.t.cpp  zip.t.cpp
